Fix subscription level

--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -21,6 +21,8 @@ services:
       - megasec
     env_file:
       - development.env
+    depends_on:
+      - broker
 
   motionsensor:
     build: motionsensor/
