Add MQTT broker ip

--- a/project/camera/.env.example
+++ b/project/camera/.env.example
@@ -2,3 +2,4 @@ AWS_ACCESS_KEY_ID=YOUR_ACCESS_KEY
 AWS_SECRET_ACCESS_KEY=YOUR_SECRET_KEY
 AWS_DEFAULT_REGION=eu-west-1
 S3_BUCKET=YOUR_S3_BUCKET
+MQTT_BROKER_IP=MQTT_BROKER_IP
