Add buzzer, stateindicator and basic tls support

--- a/project/broker/Dockerfile
+++ b/project/broker/Dockerfile
@@ -5,8 +5,10 @@ WORKDIR /usr/src/app
 RUN apk add mosquitto
 
 COPY requirements.txt ./
+COPY mosquitto/ /etc/mosquitto/
+
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-CMD mosquitto &&  python controller.py
+CMD mosquitto -c /etc/mosquitto/mosquitto.conf &&  python controller.py
