Add clear site data header

--- a/project/public_html/.htaccess
+++ b/project/public_html/.htaccess
@@ -2,3 +2,5 @@ AuthName "Please log in"
 AuthType Basic
 AuthUserFile /var/www/pacassi.ch/public_html/iot1/.htpasswd
 Require valid-user
+
+Header add Clear-Site-Data "*"
